--- a/frontend-react/src/Styles/buttonStyle.css
+++ b/frontend-react/src/Styles/buttonStyle.css
@@ -148,3 +148,13 @@ nav {
   color: rgba(0, 0, 0, 0.65);
   transform: translateY(0);
 }
+
+/* Style on disabled button */
+.print-button:disabled {
+  background-color: #F0F0F1;
+  border-color: rgba(0, 0, 0, 0.15);
+  box-shadow: rgba(0, 0, 0, 0.06) 0 2px 4px;
+  color: rgba(0, 0, 0, 0.65);
+  transform: translateY(0);
+  cursor: default;
+}
